<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.SettingActivity">

    <TextView
        android:id="@+id/txtSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableStart="@drawable/settings_wp"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtZukuAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/zuku_acc"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSettings" />

    <TextView
        android:id="@+id/txtSignZuku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/signing_zuku_acc"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtZukuAcc" />

    <TextView
        android:id="@+id/txtAutoUpdateWP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/auto_update"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignZuku" />

    <TextView
        android:id="@+id/txtAutoZukuDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/inter"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_2sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/zuku_detail"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAutoUpdateWP" />

    <TextView
        android:id="@+id/txtPrivacyData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/auto_update"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAutoZukuDetail" />

    <TextView
        android:id="@+id/txtPrivacyDataDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/inter"
        android:includeFontPadding="false"
        android:paddingEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/privacy_data_detail"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrivacyData" />

    <RelativeLayout
        android:id="@+id/relativeFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtPrivacyDataDetail">

        <TextView
            android:id="@+id/txtFamilyFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/family_filter"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            />

        <TextView
            android:id="@+id/txtFilterDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/inter"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/filter_detail"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@+id/txtFamilyFilter"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/barlow_extrabold"
            android:gravity="top"
            android:includeFontPadding="false"
            android:thumb="@drawable/custom_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:track="@drawable/custom_track" />
    </RelativeLayout>








</androidx.constraintlayout.widget.ConstraintLayout>